tests/integration/fail/array_contract_bad_element.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
%force% ([1, "a"] | Array Number) 0
